# avoma-client

./: README.md  openapi.yml  pyproject.toml  pytest.ini
avoma/: __init__.py  client.py
avoma-client/avoma/: client.py
avoma-client/avoma/api/: meetings.py  recordings.py  sentiments.py  smart_categories.py  transcriptions.py
avoma-client/avoma/models/: base.py  calls.py  meetings.py  sentiments.py  users.py
avoma/api/: calls.py  meetings.py  notes.py  sentiments.py  templates.py  users.py
avoma/models/: base.py  recordings.py  sentiments.py  templates.py  transcriptions.py
examples/: analyze_sentiments.py  get_recording.py  get_transcription.py  list_meetings.py  logging_example.py  manage_calls.py  manage_notes.py  manage_smart_categories.py  manage_templates.py  manage_users.py
tests/: test_calls.py  test_meetings.py  test_notes.py  test_recordings.py  test_sentiments.py  test_simple.py  test_smart_categories.py  test_transcriptions.py  test_users.py
