[tool.poetry]
name = "avoma-client"
version = "0.1.0"
description = "Python client for the Avoma API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "avoma"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.3"
pydantic = "^2.6.1"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
aioresponses = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 